--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,5 @@ edition = "2018"
 
 [dependencies]
 structopt = "0.3.14"
-chess = {git = "git@github.com:ijagberg/chess.git"}
+chess = { git = "https://github.com/ijagberg/chess.git", branch = "main" }
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-[dependencies.game]
-path = "libs/game"
