--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -5,5 +5,9 @@ authors = ["Isak Jägberg <ijagberg@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+structopt = "0.3.21"
+async-std = { version = "1.8.0", features = ["attributes"] }
+dotenv = "0.15.0"
+serde = { version = "1.0.118", features = ["derive"] }
+serde_json = "1.0.60"
