--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,7 +7,10 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
 structopt = "0.3.21"
-async-std = { version = "1.8.0", features = ["attributes"] }
 dotenv = "0.15.0"
-serde = { version = "1.0.118", features = ["derive"] }
-serde_json = "1.0.60"
+tokio = { version = "0.2", features = ["macros", "sync"] }
+warp = "0.2"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+futures = { version = "0.3", default-features = false }
+uuid = { version = "0.4", features = ["serde", "v4"] }
