--- a/clichess-server/Cargo.toml
+++ b/clichess-server/Cargo.toml
@@ -5,5 +5,8 @@ authors = ["Isak Jägberg <ijagberg@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-websocket = "0.26.2"
 clichess-model = { path = "../clichess-model" }
+actix-web = "3.2.0"
+actix-web-actors = "3"
+actix = "0.10.0"
+uuid = { version = "0.8", features = ["v4", "serde"] }
